---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 4/9/25
  Bugfixes:
    - Hex cores can no longer accidentally contain two trades that feed each other infinitely.
    - Steel chests and modded entities derived from steel chests no longer show the hex core GUI.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 27/8/25
  Translation:
    - Updated Russian translations. (courtesy Shadow_Man)
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 22/8/25
  Major Features:
    - Moved dungeons off of the oceans and into the main bulk of land.
    - All land hexes on all planets are now claimable, instead of possibly being separated by liquid hexes.
  Features:
    - Dungeon turrets and walls now fall when the dungeon is looted.
    - Hex cores generate inside dungeons. They get auto-claimed upon looting their dungeon.
    - There are now easy, medium, and hard types of dungeons to fight on each planet, containing appropriate amounts of loot.
  Minor Features:
    - JSON trades export now includes core quality information and whether the core is or was in a dungeon.
  Balancing:
    - Made dungeons smaller and have better loot on each planet.
    - Coins are now found in every dungeon loot chest, an amount proportional to the overall loot value.
    - Rebalanced dungeon difficulties.
    - Nerfed [item=atomic-bomb]. Can be tweaked or disabled in mod settings.
    - Added per-planet global trade productivity modifiers. Can be tweaked or disabled in mod settings.
    - Added Vulcanus quest that can be completed before claiming the center hex, removing the need to bring coins to Vulcanus.
    - Added extra huge volcanic rocks to Vulcanus' first hex to help with starting up if you don't bring coins.
    - Buffed rewards of many quests.