@@ -1,11 +1,0 @@
-return {
-    params = {
-        max_steps_per_iteration = 50,
-        allow_cross_surface = true,
-        max_excess = 1,
-        max_required = 1,
-    },
-    state = {
-        reset = true,
-    },
-}
